--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p> 
                 
         <div class="img-logo">
-                <img src="/LOGO-02.png" alt="logo-ergon">
+                <img src="LOGO-02.png" alt="logo-ergon">
         </div>
         </div>
        
