--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <p class="texto-aviso">
                         Prezados,<br>
-                        Caros usuários e clientes da Ergon Sistemas, Informamos que nosso site, <b class="destaque">ergonsistemas.com.br</b>, está passando por problemas temporários devido à nossa hospedagem com a Hostinger.  Os mesmos já estão trabalhando intensamente para normalizar o site o mais rápido possível.
+                        Caros usuários e clientes da Ergon Sistemas, Informamos que nosso site, <b class="destaque">ergonsistemas.com.br</b>, está passando por problemas temporários em sua hospedagem. Estamos aguardando a normalização o mais rápido possível.
                         <br>
                         <br>
                         Pedimos desculpas pelos transtornos e agradecemos sua compreensão. 
